force-app/main/default/objects/Products__x/Products__x.object-meta.xml
<CustomObject>
    <description>Products</description>
    <externalDataSource>ExternalDataSource1</externalDataSource>
    <externalName>Products</externalName>
    <label>Products</label>
    <pluralLabel>Products</pluralLabel>
</CustomObject>