force-app/main/default/objects/Products__x/fields/DiscontinuedDate__c.field-meta.xml
<CustomField>
    <fullName>DiscontinuedDate__c</fullName>
    <description>DiscontinuedDate</description>
    <externalDeveloperName>DiscontinuedDate</externalDeveloperName>
    <label>DiscontinuedDate</label>
    <type>DateTime</type>
</CustomField>