force-app/main/default/objects/Products__x/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Rating</description>
    <externalDeveloperName>Rating</externalDeveloperName>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>