force-app/main/default/objects/Products__x/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <description>ReleaseDate</description>
    <externalDeveloperName>ReleaseDate</externalDeveloperName>
    <label>ReleaseDate</label>
    <type>DateTime</type>
</CustomField>